paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/enum_specifiers/sample_003/target.compile.log
warning: value assigned to `col` is never read
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/enum_specifiers/sample_003/target.rs:47:5
   |
47 |     col = Hue::WineDark;
   |     ^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

error[E0507]: cannot move out of `*cp` which is behind a shared reference
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/enum_specifiers/sample_003/target.rs:43:19
   |
43 |     if check_vals(*cp) != 12 {
   |                   ^^^ move occurs because `*cp` has type `Hue`, which does not implement the `Copy` trait
   |
note: if `Hue` implemented `Clone`, you could clone the value
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/enum_specifiers/sample_003/target.rs:3:1
   |
 3 | enum Hue {
   | ^^^^^^^^ consider implementing `Clone` for this type
...
43 |     if check_vals(*cp) != 12 {
   |                   --- you could clone this value

error[E0506]: cannot assign to `col` because it is borrowed
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/enum_specifiers/sample_003/target.rs:47:5
   |
34 |     let cp = &col;
   |              ---- `col` is borrowed here
...
47 |     col = Hue::WineDark;
   |     ^^^^^^^^^^^^^^^^^^^ `col` is assigned to here but it was already borrowed
48 |     if check_vals(*cp) != 13 {
   |                   --- borrow later used here

error[E0507]: cannot move out of `*cp` which is behind a shared reference
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/enum_specifiers/sample_003/target.rs:48:19
   |
48 |     if check_vals(*cp) != 13 {
   |                   ^^^ move occurs because `*cp` has type `Hue`, which does not implement the `Copy` trait
   |
note: if `Hue` implemented `Clone`, you could clone the value
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/enum_specifiers/sample_003/target.rs:3:1
   |
 3 | enum Hue {
   | ^^^^^^^^ consider implementing `Clone` for this type
...
48 |     if check_vals(*cp) != 13 {
   |                   --- you could clone this value

error: aborting due to 3 previous errors; 1 warning emitted

Some errors have detailed explanations: E0506, E0507.
For more information about an error, try `rustc --explain E0506`.